--- a/manifest.json
+++ b/manifest.json
@@ -29,8 +29,8 @@
       "js": [
         "scripts/p5/p5.min.js",
         "scripts/html2canvas.min.js",
-        "scripts/sketch.js",
-        "scripts/contentScript.js"
+        "scripts/contentScript.js",
+        "scripts/sketch.js"
       ],
       "run_at": "document_end"
     }
