--- a/manifest.json
+++ b/manifest.json
@@ -28,6 +28,7 @@
       ],
       "js": [
         "scripts/p5/p5.min.js",
+        "scripts/p5/p5.sound.min.js",
         "scripts/html2canvas.min.js",
         "scripts/contentScript.js",
         "scripts/sketch.js"
